--- a/public/styles/main.scss
+++ b/public/styles/main.scss
@@ -234,7 +234,7 @@ html {
                   border-bottom-right-radius: 2px;
                   border-top-left-radius: 2px;
                   border-top-right-radius: 2px;
-                  padding: 5px;
+                  padding: 7px;
                   color: #ffffff;
                   -webkit-font-smoothing: antialiased;
                   -moz-osx-font-smoothing: grayscale;
@@ -244,9 +244,10 @@ html {
                   width: 100%;
                   margin-top: 0;
                   overflow-y: auto;
-                  height: 200px;
+                  max-height: 250px;
+                  box-shadow: 0px 1px 1px 0px rgba(50, 50, 50, 0.3);
                   @include border-top-radius(0);
-                  background-color: rgba(255, 255, 255, 0.1);
+                  background-color: rgba(255, 255, 255, 0.15);
                   border: 0;
                   color: #ffffff;
                   padding: 0;
@@ -257,8 +258,8 @@ html {
                   .angucomplete-row {
                     border-bottom: 1px solid rgba(255, 255, 255, 0.02);
                     width: 100%;
-                    font-size: 14px;
-                    color: rgba(255, 255, 255, 0.5);
+                    font-size: 13px;
+                    color: rgba(255, 255, 255, 0.8);
                     margin: 0;
                     padding: 5px 10px;
                   }
